index.html,mixins,variables,sass modified

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Under The Sea</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
