--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
           <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
+      <h1>
+        under<br />
+        the <br />sea
+      </h1>
     </header>
   </body>
 </html>
