made some changes on index.html style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="wrapper">
         <ul>
           <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
@@ -16,10 +16,59 @@
           <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
-      <h1>
+      <h1 class="wrapper">
         under<br />
         the <br />sea
       </h1>
+      <div class="header-box-image">
+        <img src="./assets/home-box-header.png" alt="" />
+      </div>
     </header>
+    <main>
+      <section class="section-1">
+        <div class="wrapper">
+          <h3>What is under the sea?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam ab
+            provident libero consectetur nisi nostrum ad repudiandae soluta.
+            Maiores, ipsa. Dolore accusantium sapiente magnam expedita fuga
+            quibusdam magni ipsam doloremque? Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Aliquid iste ullam asperiores, eos ex
+            doloremque illum doloribus recusandae facilis praesentium.
+          </p>
+          <button>Find Out More</button>
+        </div>
+      </section>
+      <section class="section-2">
+        <article class="wrapper">
+          <div class="left-image">
+            <img src="./assets/left-image.jpg" alt="" />
+          </div>
+          <div class="right-side-content">
+            <h4>NEW ADDITIONS</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              doloribus repellendus error suscipit doloremque tempora
+              reiciendis, soluta quibusdam voluptatem. Libero.
+            </p>
+            <button>READ MORE</button>
+          </div>
+        </article>
+        <article class="wrapper">
+          <div class="left-side-content">
+            <h4>MEET REAL NEMO</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              doloribus repellendus error suscipit doloremque tempora
+              reiciendis, soluta quibusdam voluptatem. Libero.
+            </p>
+            <button>READ MORE</button>
+          </div>
+          <div class="right-image">
+            <img src="./assets/right-image.jpg" alt="" />
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
